maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: not found: value isOverBagel
  while(!isOverBagel()){
         ^Escaper:12: error: not found: value pickupBagel
  pickupBagel()
  ^