maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!isFacingWall()){
    left()
  }
  while(!isOverBagel()){
    while(isFacingWall()){
      left()
    }
    forward()
    right()
  }
  pickupBagel()
}